--- a/letter-sort/package.json
+++ b/letter-sort/package.json
@@ -10,11 +10,14 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^19.1.6",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "@types/uuid": "^10.0.0",
     "framer-motion": "^12.18.1",
-    "react-beautiful-dnd": "^13.1.1"
+    "uuid": "^11.1.0"
   }
 }
